# no-db-verify

./: Cargo.toml  LICENSE  README.md
src/: html.rs  main.rs  user.rs  verify.rs
templates/: base.html  create_user.html  generate_reset.html  list.html  new_user.html  reset_password.html
