[package]
name = "no-db-verify"
version = "0.1.0"
authors = ["Eric Butler <idealeric@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
rand = "0.7"
bcrypt = "0.6"
askama = "0.8"
sha3 = "0.8"
hmac = "0.7"
serde_url_params = "0.2"
base64 = "0.12"
chrono = { version = "0.4", features = ["serde"] }
